...
  "sourceLanguage" : "en",
  "strings" : {
    "Calendar" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Calendario" } },
...
      }
    },
    "Year" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Año" } },
...
      }
    },
    "Schedule" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Programa" } },
...
      }
    },
    "Send report" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Enviar informe" } },
...
      }
    },
    "Spent" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Realizado" } },
...
      }
    },
    "Field service" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Predicación" } },
...
      }
    },
    "LDC" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "LDC" } },
...
      }
    },
    "Bethel" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Betel" } },
...
      }
    },
    "Done" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Hecho" } },
...
      }
    },
    "Total credited" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Total acreditado" } },
...
      }
    },
    "Send to Hourglass" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Enviar a Hourglass" } },
...
      }
    },
    "Share report…" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Compartir informe…" } },
...
      }
    },
    "Copy report" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Copiar informe" } },
...
      }
    },
    "Confirm time spent" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Confirmar tiempo realizado" } },
...
      }
    },
    "Save" : {
      "localizations" : {
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Guardar" } },
...
